--- a/playgrounds/react/package.json
+++ b/playgrounds/react/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "@ds.e/react",
+  "name": "@playgrounds/react",
   "version": "1.0.0",
   "main": "lib/index.js",
   "license": "MIT",
   "devDependencies": {
     "@types/react": "^17.0.20",
+    "@types/react-dom": "^17.0.9",
+    "parcel-bundler": "^1.12.5",
     "react": "^17.0.2",
-    "rollup": "^2.56.3",
-    "rollup-plugin-typescript2": "^0.30.0",
+    "react-dom": "^17.0.2",
     "typescript": "^4.4.2"
   },
   "scripts": {
-    "build": "rollup -c"
+    "dev": "parcel src/index.html -p 3000"
   }
 }
