Fix structure for lerna dependencies

--- a/package.json
+++ b/package.json
@@ -18,10 +18,8 @@
       "**/normalize-scss"
     ]
   },
-  "npmClient": "yarn",
-  "useWorkspaces": true,
-  "stream": true,
   "scripts": {
-    "build": "yarn lerna run build"
+    "build": "yarn lerna run build",
+    "dev": "yarn lerna run dev"
   }
 }
