--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,7 @@
 {
-  "packages": ["packages/*"],
-  "version": "0.0.0"
+  "packages": ["packages/*", "playgrounds/*"],
+  "version": "0.0.0",
+  "npmClient": "yarn",
+  "useWorkspaces": true,
+  "stream": true
 }
