--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -11,6 +11,7 @@
     "typescript": "^4.4.2"
   },
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "dev": "yarn build --watch"
   }
 }
