--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "scripts": {
     "build": "yarn lerna run build",
-    "dev": "yarn lerna run dev"
+    "develop": "yarn lerna run dev",
+    "dev": "yarn build && yarn develop"
   }
 }
