--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,14 @@
 {
-  "packages": ["packages/*", "playgrounds/*"],
-  "version": "0.0.0",
+  "packages": [
+    "packages/*"
+  ],
+  "version": "0.1.3",
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "stream": true
+  "stream": true,
+  "command": {
+    "publish": {
+      "conventionalCommits": true
+    }
+  }
 }
