--- a/packages/foundation/package.json
+++ b/packages/foundation/package.json
@@ -1,13 +1,24 @@
 {
   "name": "@ds.e/foundation",
-  "version": "1.0.0",
+  "version": "0.1.3",
   "main": "lib/index.js",
   "license": "MIT",
+  "files": [
+    "lib"
+  ],
   "devDependencies": {
-    "typescript": "^4.4.2"
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/jest": "^26.0.7",
+    "jest": "^26.1.0",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "build": "tsc",
-    "dev": "yarn build -w"
+    "dev": "yarn build -w",
+    "test": "jest --verbose"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
