--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,17 +1,43 @@
 {
   "name": "@ds.e/react",
-  "version": "1.0.0",
+  "version": "0.1.3",
   "main": "lib/index.js",
   "license": "MIT",
+  "files": [
+    "lib"
+  ],
   "devDependencies": {
-    "@types/react": "^17.0.20",
-    "react": "^17.0.2",
-    "rollup": "^2.56.3",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "typescript": "^4.4.2"
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@ds.e/foundation": "^0.1.0",
+    "@storybook/addon-a11y": "^5.3.19",
+    "@storybook/addon-knobs": "^5.3.19",
+    "@storybook/addon-storysource": "^5.3.19",
+    "@storybook/preset-typescript": "^3.0.0",
+    "@storybook/react": "^5.3.19",
+    "@testing-library/jest-dom": "^5.11.1",
+    "@testing-library/react": "^10.4.7",
+    "@types/jest": "^26.0.7",
+    "@types/react": "^16.9.43",
+    "babel-loader": "^8.1.0",
+    "chromatic": "^5.0.0",
+    "jest": "^26.1.0",
+    "react": "^16.13.1",
+    "rollup": "^2.22.1",
+    "rollup-plugin-typescript2": "^0.27.1",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "build": "rollup -c",
-    "dev": "yarn build --watch"
+    "dev": "yarn build --watch",
+    "test": "jest --verbose",
+    "test:watch": "yarn test --watch",
+    "start-storybook": "start-storybook",
+    "build-storybook": "build-storybook",
+    "test:chromatic": "chromatic --project-token=\"$CHROMATIC_PROJECT_TOKEN\""
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
