--- a/packages/scss/package.json
+++ b/packages/scss/package.json
@@ -1,21 +1,25 @@
 {
   "name": "@ds.e/scss",
-  "version": "0.0.1",
+  "version": "0.1.3",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "normalize-scss": "^7.0.1"
   },
+  "files": [
+    "lib",
+    "src"
+  ],
   "devDependencies": {
-    "husky": "^7.0.2",
-    "lint-staged": "^11.1.2",
-    "node-sass": "^6.0.1",
-    "nodemon": "^2.0.12",
-    "prettier": "^2.3.2",
-    "stylelint": "^13.13.1",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
+    "node-sass": "^4.14.1",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.0.5",
+    "stylelint": "^13.6.1",
     "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-sass-guidelines": "^8.0.0",
-    "stylelint-prettier": "^1.2.0"
+    "stylelint-config-sass-guidelines": "^7.0.0",
+    "stylelint-prettier": "^1.1.2"
   },
   "scripts": {
     "lint": "stylelint './**/*.scss'",
@@ -30,5 +34,8 @@
   },
   "lint-staged": {
     "*.scss": "yarn lint:fix"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
