--- a/playgrounds/react/package.json
+++ b/playgrounds/react/package.json
@@ -1,17 +1,18 @@
 {
   "name": "@playgrounds/react",
-  "version": "1.0.0",
-  "main": "lib/index.js",
+  "version": "0.1.0",
+  "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
-    "parcel-bundler": "^1.12.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "typescript": "^4.4.2"
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
+    "parcel-bundler": "^1.12.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "dev": "parcel src/index.html -p 3000"
-  }
+  },
+  "private": "true"
 }
